# wqa

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  analytic.md  developement.md  notes.md  readme.md  roadmap.md  tc.md  wqa.md
roadmap/00-training/: plan.md
roadmap/01-architecture/: architecture.md  project.md
wqa/: Cargo.toml  README.md
wqa-canbus/: .gitignore  Cargo.toml  README.md
wqa-canbus/src/: airflow.rs  axis.rs  client.rs  dbus.rs  digital.rs  error.rs  humidity.rs  lamp.rs  lib.rs  mio.rs  monitor.rs  pcan.rs  pressure.rs  pump.rs  relays.rs  remote.rs  rpc.rs  sensor.rs  simulation.rs  temperatur.rs  timer.rs  valve.rs
wqa-canbus/src/node/: analog.rs  digital.rs
wqa-canbus/src/pre/: edinburg.rs  edinburgh.rs  humidity.rs  lamp.rs  machine_id.rs  main.rs  method-uvtc.md  mod.rs  pressure.rs  property.rs  pump.rs  quicktocuv.rs  sample.rs  stream.rs  ultra.rs  valve.rs
wqa-common/: README.md
wqa-measure/: .gitignore  Cargo.toml
wqa-measure/src/: calibration.rs  channel.rs  lib.rs  measurement.rs  stream.rs
wqa/src/: lib.rs
wqms/: Cargo.toml
wqms/src/: lib.rs
