[package]
name = "wqa"
version = "0.0.2"
authors = ["asmolkov <asmolkov@lar.com>"]
edition = "2018"
description = "Water quality monitoring platform framework"
keywords = ["mio","can", "system", "information"]
categories = ["asynchronous", "os"]
repository = "https://github.com/lar-ag/wqa-core"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[badges]
maintenance = { status = "experimental" }

[dependencies]
wqa-common = { path = "wqa-common" }
wqa-derive = { path = "wqa-derive" }
wqa-mio =    { path = "wqa-mio" }
wqa-host =   { path = "wqa-host" }
wqa-net =    { path = "wqa-net" }
wqa-cpu =    { path = "wqa-cpu" }
wqa-memory = { path = "wqa-memory"}
wqa-disk =   { path = "wqa-disk"}
wqa-process= { path = "wqa-process"}

[features]
doc = [
    "wqa-common/doc",
    "wqa-mio/doc",
    # "wqa-host/doc",
    # "wqa-cpu/doc",
    # "wqa-memory/doc",
    # "wqa-disk/doc",
#    "wqa-net/doc",
]

[workspace]
members = [
    "wqa-common",
    "wqa-derive",
    "wqa-mio",
    "wqa-host",
    "wqa-net",
    # "wqa-cpu",
    # "wqa-memory",
    # "wqa-disk",
#    "wqa-process",
#    "wqa-virt",
#    "wqa-winservice",
]
default-members = ["wqa-derive","wqa-common", "wqa-mio", "wqa-host", "wqa-net"]

exclude=[ "roadmap/*", ".example/*"]



# [patch.crates-io]
# http-service = { git = 'https://github.com/prasannavl/http-service' }
# awaiting for this PRs to be published
# https://github.com/rust-lang-nursery/futures-rs/pull/1627
# https://github.com/rust-lang-nursery/futures-rs/pull/1618
# futures-preview = { git = "https://github.com/rust-lang-nursery/futures-rs", rev = "14cf135b41bff10ac4139d914e585e32bacfcd7a" }
