[package]
name = "wqa-canbus"
version = "0.0.1"
authors = ["smolkov <asmolkov@lar.com>"]
edition = "2018"
description = "Placeholder crate"
keywords = ["wqa", "system","can", "information"]
categories = ["asynchronous", "os"]
repository = "https://github.com/lar-ag/wqa-core"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[package.metadata.docs.rs]
features = ["doc"]

[badges]
maintenance = { status = "experimental" }


[dependencies]
log = "0.4.6"
ron = "0.5.1"
# Serializer
serde_json = "1.0"
serde = {version = "1.0.93", features = ["derive"]}
serde_derive = "1.0.93"


bincode = "1.1.4"
lazy_static = "1.3.0"
socketcan = "1.7.0"
failure = "0.1.5"
futures-preview = { version = "=0.3.0-alpha.16", features = ["async-await", "nightly"] }
dbus = "0.6.4"
fs2 = "0.4.3"
heapless = "0.5.0-alpha.2"
# tarpc = "0.18.0"
scopeguard = "1.0.0"
jsonrpc-core = "12.0.0"
jsonrpc = "0.11.0"


# tarpc = "0.18.0"
runtime = "0.3.0-alpha.5"
tide = "0.2.0"
# bitflags = "1.1.0"


[features]
doc = []

