[package]
name = "wqa-measure"
version = "0.1.0"
authors = ["Sascha Smolkov <sascha.smolkov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.5.1"
# Serializer
serde_json = "1.0"
serde = {version = "1.0.93", features = ["derive"]}
serde_derive = "1.0.93"



futures-preview = { version = "0.3.0-alpha.16", features = ["compat"] }
runtime = "0.3.0-alpha.5"
fs2 = "0.4.3"
